fix: macos libX11.6 lib missing

--- a/.github/workflows/build-ffmpeg-minimal.yml
+++ b/.github/workflows/build-ffmpeg-minimal.yml
@@ -91,6 +91,7 @@ jobs:
             --disable-avdevice \
             --disable-swscale \
             --disable-network \
+            --disable-xlib \
             --enable-ffmpeg \
             --disable-everything \
             --enable-protocol=file \
